# stapik-common

./: CMakeLists.txt
src/stapik/cloud/: CloudStorageClient.cpp  CloudStorageClient.hpp  CloudStorageConfig.hpp  CloudStorageException.hpp
src/stapik/locale/: Locale.hpp  LocaleManager.cpp  LocaleManager.hpp  LocalizationEngine.cpp  LocalizationEngine.hpp
src/stapik/storage/: AppPaths.cpp  AppPaths.hpp  CloudStorageConfigStorage.cpp  CloudStorageConfigStorage.hpp
src/stapik/sync/: SyncEnvelope.cpp  SyncEnvelope.hpp  Timestamp.cpp  Timestamp.hpp
src/stapik/ui/dialog/: ConnectDialog.cpp  ConnectDialog.hpp  DialogUtils.cpp  DialogUtils.hpp
src/stapik/ui/style/: AppStyleProvider.cpp  AppStyleProvider.hpp
